--- a/index.html
+++ b/index.html
@@ -16,8 +16,26 @@
         <![endif]-->
     </head>
     <body>
+        <header class="header clearfix">
+            asd
+        </header>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <section class="main clearfix">
+            <div class="top">
+                <ul class="tab_links clearfix">
+                    <li><a href="#">Rental Properties</a></li>
+                    <li><a href="#">Associations</a></li>
+                    <li><a href="#">Accounting</a></li>
+                    <li><a href="#">Tasks</a></li>
+                    <li><a href="#">Communication</a></li>
+                </ul>
+            </div>
+            asd
+        </section>
+
+        <footer class="footer clearfix">
+
+        </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
