Updated page. css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
         <!--[if lt IE 9]>
@@ -17,24 +16,32 @@
     </head>
     <body>
         <header class="header clearfix">
-            asd
+            <div class="left">
+                <h1>Ace Properties</h1>
+            </div>
         </header>
 
         <section class="main clearfix">
             <div class="top">
                 <ul class="tab_links clearfix">
-                    <li><a href="#">Rental Properties</a></li>
+                    <li><a href="#" class="selected">Rental Properties</a><i class="arrow"></i></li>
                     <li><a href="#">Associations</a></li>
                     <li><a href="#">Accounting</a></li>
                     <li><a href="#">Tasks</a></li>
                     <li><a href="#">Communication</a></li>
                 </ul>
             </div>
-            asd
+
+            <div class="content">
+                <h4 class="rental_infoline">Active lease | Fixed <span>11/1/2010</span> - <span>10/31/2011</span><i>90 Days</i></h4>
+
+                <h2 class="heading">The Beacon - Suit 1 <span>Ernie Bass, Gerry Gilbraten</span></h2>
+            </div>
+
         </section>
 
         <footer class="footer clearfix">
-
+            <a href="index.html" class="logo">buildium property manager edition</a>
         </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
