--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="main clearfix">
             <div class="top">
                 <ul class="tab_links clearfix">
-                    <li><a href="#" class="selected">Rental Properties</a><i class="arrow"></i></li>
+                    <li><a href="#" class="selected">Rental Properties<i class="arrow"></i></a></li>
                     <li><a href="#">Associations</a></li>
                     <li><a href="#">Accounting</a></li>
                     <li><a href="#">Tasks</a></li>
@@ -36,6 +36,28 @@
                 <h4 class="rental_infoline">Active lease | Fixed <span>11/1/2010</span> - <span>10/31/2011</span><i>90 Days</i></h4>
 
                 <h2 class="heading">The Beacon - Suit 1 <span>Ernie Bass, Gerry Gilbraten</span></h2>
+                
+                <nav class="tabs">
+                    <ul class="clearfix">
+                        <li><a href="#summary">Summary</a></li>
+                        <li><a href="#financials">Financials</a></li>
+                        <li><a href="#tenants" class="selected">2 Tenants <i class="arrow"></i></a></li>
+                        <li><a href="#event">Event History</a></li>
+                    </ul>
+                </nav>
+
+                <article id="summary" class="tabs_content">
+                    asd S
+                </article>
+                <article id="financials" class="tabs_content">
+                    asd F
+                </article>
+                <article id="tenants" class="tabs_content">
+                    asd tenants
+                </article>
+                <article id="event" class="tabs_content">
+                    asd event
+                </article>
             </div>
 
         </section>
