Updated tabs JQ script

--- a/index.html
+++ b/index.html
@@ -53,7 +53,26 @@
                     asd F
                 </article>
                 <article id="tenants" class="tabs_content">
-                    asd tenants
+                    <div class="col1">
+                        <a class="addButton" href="#">Add Tenant</a>
+                        <ul class="boxes">
+                            <li>
+                                <div class="box_top">
+                                    <time>00/00/0000</time>
+
+                                    <ol>
+                                        <li><a href="#" class="moveout">Move out</a></li>
+                                        <li><a href="#" class="delete">Delete</a></li>
+                                    </ol>
+                                </div>
+
+                                asd
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col2">
+
+                    </div>
                 </article>
                 <article id="event" class="tabs_content">
                     asd event
