--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="ajinkyaApp">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -52,13 +52,15 @@
                 <article id="financials" class="tabs_content">
                     asd F
                 </article>
-                <article id="tenants" class="tabs_content">
+                <article id="tenants" class="tabs_content" ng-controller="tenantsCtrl">
                     <div class="col1">
-                        <a class="addButton" href="#">Add Tenant</a>
+                        <div class="topDiv clearfix">
+                            <a class="addButton" href="#">Add Tenant</a>
+                        </div>
                         <ul class="boxes">
-                            <li>
+                            <li ng-repeat="user in tenants">
                                 <div class="box_top">
-                                    <time>00/00/0000</time>
+                                    <time>{{user.time}}</time>
 
                                     <ol>
                                         <li><a href="#" class="moveout">Move out</a></li>
@@ -66,7 +68,17 @@
                                     </ol>
                                 </div>
 
-                                asd
+                                <div class="userpic">
+                                    <img ng-src="{{user.userpic}}" alt="{{user.name}}">
+                                </div>
+                                <address class="userdetail">
+                                    <h3>{{user.name}}</h3>
+                                    <p>Home: {{user.homephone}}</p>
+                                    <p>Work: {{user.workphone}}</p>
+
+                                    <p class="email"><a href="mailto:{{user.email1}}">{{user.email1}}</a> <b>(username)</b></p>
+                                    <p class="email"><a href="mailto:{{user.email2}}">{{user.email2}}</a></p>
+                                </address>
                             </li>
                         </ul>
                     </div>
@@ -87,6 +99,9 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+
+        <script src="js/vendor/angular.min.js"></script>
+        <script src="js/app.js"></script>
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
